# MC

./: .gitignore  main.py  pyproject.toml  requirements.txt
WorldEdit/worldedit-cli/: .factorypath
WorldEdit/worldedit-core/: .factorypath
WorldEdit/worldedit-fabric/: .factorypath
WorldEdit/worldedit-neoforge/.eclipse/configurations/: Prepare Worldedit-neoforge - Client.launch  Run Worldedit-neoforge - Client.launch  Run Worldedit-neoforge - ClientData.launch  Run Worldedit-neoforge - GameTestServer.launch  Run Worldedit-neoforge - Server.launch  Run Worldedit-neoforge - ServerData.launch  Worldedit-neoforge - client.launch  Worldedit-neoforge - clientData.launch  Worldedit-neoforge - gameTestServer.launch  Worldedit-neoforge - server.launch  Worldedit-neoforge - serverData.launch
WorldEdit/worldedit-sponge/: .factorypath
assets/: biomes.txt  blockstates.txt  crawl_state.json
mc-parser/: .project
mc-parser/app/: .project
notebooks/: parse_test.ipynb
scripts/: parse_minecraft_world.py
src/: batching.py  crawler.py  detail_crawler.py  region_extractor.py
src/notebooks/: main.ipynb
