[project]
name = "minecraft-world-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amulet-core>=1.9.33",
    "amulet-map-editor>=0.10.48",
    "anvil-parser>=0.9.0",
    "asttokens==3.0.1",
    "blosc2>=3.12.2",
    "build==1.3.0",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "frozendict==2.4.7",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "lz4==4.4.5",
    "matplotlib-inline==0.2.1",
    "mutf8==1.0.6",
    "napari[all]>=0.6.5",
    "nbt==1.5.1",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==3.11.0",
    "portalocker==2.10.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pymctranslate==1.2.36",
    "pympler>=1.1",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "qtpy>=2.4.3",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "snakeviz>=2.2.2",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "undetected-chromedriver>=3.5.5",
    "uv==0.9.11",
    "wcwidth==0.2.14",
    "webdriver-manager>=4.0.2",
    "wheel==0.45.1",
    "wxpython>=4.2.4",
]
